# aidm

./: .commit_msg.tmp  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Complete and Verify Backfill.md  Dockerfile  Fixing Series Season Conflation.md  PLAN.md  README.md  ROADMAP.md  TASKS.md  backup_aidm.ps1  biome.json  docker-compose.yml  drizzle.config.ts  log  lore_cli.py  mediaplan.md  narrative_system_map.md  next.config.ts  package.json  pnpm-lock.yaml  pr_diff.txt  pyproject.toml  railway.json  requirements.txt  run_server.py  scrub_backups.ps1  setup.sh  sz_upgrade_plan.md  tmp  transcript_export.md  tsconfig.json  unfinished task  vitest.config.ts
.claude/: plan.md
aidm_v3/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _audit.json  _handoff_log.txt  alembic.ini  audit_output.txt  audit_session.py  backfill_npcs.py  belial_analysis.py  belial_analysis.txt  db_check.txt  docker-compose.yml  dump_transcript.py  entrypoint.sh  error.txt  pyproject.toml  reindex_session_zero.py  requirements.txt  ruff.toml  run_server.py  settings.json  test_failures.txt  test_model_sheet.py  test_out.txt  test_output.txt  test_power_differential.py  test_results.txt  tmp_audit_files.txt  tmp_body_audit.txt  tmp_func_audit.txt  tmp_gitlog.txt  tmp_media_files.txt  tmp_media_log.txt  tmp_method_audit.txt  tmp_mixin_classes.txt  tmp_old_sz.py  tmp_old_sz_feb13.py  (+3 more)
alembic/: env.py
api/: main.py
dev/: AIDM_V3_TASKS.md  ARCHITECTURAL_AUDIT_2026.md  dump_transcript.py  migrate_chroma_to_pg.py
docs/: context_blocks_plan.md  (+2 more)
evals/: README.md  (+4 more)
(+1284 files in other folders)
