[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aidm-v3"
version = "0.1.0"
description = "AIDM v3 - Anime Interactive Dungeon Master"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AIDM Team"}
]
keywords = ["ai", "llm", "ttrpg", "anime", "dungeon-master"]

[project.scripts]
aidm = "src.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: requires API keys (deselect with '-m not live')",
    "slow: tests taking >5s (deselect with '-m not slow')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
